# rust-webapp

./: .gitignore  Cargo.toml  README.md  codecov.yml  deploy.sh  github_deploy_key  github_deploy_key.pub  nginx.conf  quizmo.me  quizmo.service  run_frontend_tests.bat  setup_local_deploy.sh  setup_secrets.ps1  setup_server.sh
.github/workflows/: ci.yml  deploy.yml  generator-generic-ossf-slsa3-publish.yml  rust.yml
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
config/: app.config.example.toml  scripts.config.toml
docker/: .dockerignore  Dockerfile  docker-compose.yml  nginx.conf  rust-webapp.service
docs/: CONTRIBUTING.md  api.md  deployment.md  development.md  release-notes.md
frontend/: index.html  jest.config.js  jest.setup.js  package-lock.json  package.json  webpack.config.js
frontend/css/: README.md
frontend/js/: auth.js
frontend/public/: index.html
frontend/src/: index.js  styles.css
frontend/templates/: login.html  register.html
migrations/: 20231101000000_create_users.sql  20231101000001_update_users.sql  20240115_create_users.sql
scripts/: cleanup.ps1  deploy-local.ps1  deploy-remote.ps1  install_gh.ps1  setup_local_deploy.ps1
scripts/modules/: Config.psm1
src/: app_state.rs  db.rs  error.rs  lib.rs  main.rs
src/auth/: audit.rs  handlers.rs  jwt.rs  middleware.rs  mod.rs  models.rs  rate_limiter.rs  repository.rs
src/config/: mod.rs
src/handlers/: echo.rs  error.rs  health.rs  hello.rs  mod.rs  tests.rs  welcome.rs
src/models/: mod.rs  user.rs
src/routes/: mod.rs  tests.rs
static/: dashboard.html  index.html  login.html  register.html
static/images/: README.md
static/js/: README.md
tests/: auth_test.rs  integration_test.rs  integration_welcome_test.rs  mod.rs  test_changes.ps1  test_content.ps1  test_endpoints.ps1  test_methods.ps1  welcome_test.rs
tests/auth/: login_test.rs  mod.rs  registration_test.rs
tests/common/: mod.rs  test_server.rs  (+1 more)
(+21 files in other folders)
