[package]
name = "rust-webapp"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
actix-files = "0.6.6"
actix-http = "3.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
log = "0.4"
chrono = "0.4"
mime = "0.3"
num_cpus = "1.16"
