[package]
name = "rust-webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
actix-service = "2.0"
actix-utils = "3.0"
actix-rt = "2.8"
env_logger = "0.10"
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
validator = { version = "0.16.1", features = ["derive"] }
argon2 = { version = "0.5.2", features = ["password-hash"] }
jsonwebtoken = "8.3.0"
dotenv = "0.15.0"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
rand_core = { version = "0.6.4", features = ["std"] }
parking_lot = "0.12.1"
regex = "1.9.5"
lazy_static = "1.4.0"
url = "2.5.0"

[dev-dependencies]
actix-test = "0.1.1"
thirtyfour = { version = "0.31.0" }
tokio-test = "0.4.3"
fantoccini = { version = "0.19.3", features = ["native-tls"] }
serial_test = "2.0.0"
tokio = { version = "1", features = ["full"] }
webdriver = "0.48"
tera = "1.19"
actix-web-actors = "4.2.0"
once_cell = "1.18.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0.75"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[features]
default = []
test = []
